# RTL2GDS

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  flake.nix  notebook.ipynb  pyproject.toml  rtl2gds-tmp.sh  rtl2gds.sh
.github/workflows/: ci.yml  test.yml
aes/: aes.sdc  config.sh
design_zoo/aes/: README.md  aes.yaml  rtl2gds_flow.py
design_zoo/deprecated/: picorv32_config.sh  regression.sh  rtl2gds.sh
design_zoo/gcd/: README.md  gcd.yaml  rtl2gds_flow.py
design_zoo/gcd_cloud/: Dockerfile  call_service.py  cloud.py  gcd.yaml  mock_front.py
design_zoo/picorv32a/: README.md  pico.yaml  rtl2gds_flow.py
docs/: SystemDesign.md  lab.py
experimental/: Chip.py  Configs.py  Flow.py  Metrics.py  README.md  Step.py  flow.sh  gcd.yaml  pyr2g  r2g  rtl2gds_flow.py
experimental/designzoo/unit_test/: gcd.yaml  rtl2gds_flow.py  synthesis.py
experimental/rtl2gds/: chip.py  configs.py  flow.py  step.py
foundry/sky130/: mergelib.sh
gcd/: config.sh  gcd.sdc
nix/: overlay.nix
nix/modules/devShells/: default.nix
nix/modules/pkgs/: default.nix  rtl2gds.nix
nix/pkgs/: docker.nix  rtl2gds.nix
picorv32a/: config.sh  picorv32a.sdc
src/: gcd.yaml  rtl2gds_flow.py
src/rtl2gds/: __init__.py  __main__.py  chip.py  cloud_main.py  configs.py  design_constrain.py  design_path.py  flow.py  global_configs.py  metrics.py  step.py  step_dump_json.py
src/rtl2gds/chip/: __init__.py  chip.py  config.py  design_constrain.py  design_path.py  metrics.py
src/rtl2gds/evaluation/: __init__.py  timing.py
src/rtl2gds/flow/: __init__.py  cloud_flow.py  rtl2gd_flow.py  rtl2gds_flow.py  single_step.py  step_runner.py  step_wrapper.py
src/rtl2gds/step/: README.md  __init__.py  configs.py  drc.py  dump_layout_gds.py  dump_layout_json.py  floorplan.py  layout_gds.py  layout_json.py  lef_view.py  sta.py  step.py  synth_util.py  synthesis.py
src/rtl2gds/tools/: __init__.py  process.py  time.py
src/rtl2gds/utils/: __init__.py  json_helper.py  md_logger.py  process.py  time.py
tests/: rtl2gds_flow.py  single_step.py  test_dump_json.py  test_flow.py
tools/iEDA/: run_dump_gds.sh  run_floorplan.sh  run_place_route.sh
tools/iEDA/iEDA_config/: cts_default_config.json  db_config.json  db_default_config.json  flow_config.json  no_default_config_fixfanout.json  (+5 more)
tools/magic/: drc.tcl
tools/yosys/: global_var.tcl  yosys.tcl
(+39 files in other folders)
